--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 	<title>project4</title>
+
+	<!-- build:css main.min.css -->
+  <link rel="stylesheet" href="css/main.css"> 
 </head>
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
-<script src="js/main.js"></script>
 
 <body ng-app="myApp" ng-controller="myController">
 <div>VIEW</div>
@@ -14,7 +16,9 @@
 
 <script src="./bower_components/phaser/build/phaser.min.js"></script>
 
+<script src="js/main.js"></script>
 <script src="js/game.js"></script>
+
 
 </body>
 </html>
