changed assets to 75 percent, added into preload, Brian added some css and changed main.js

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,11 @@
 
 <body ng-app="myApp" ng-controller="myController">
 <div>VIEW</div>
-<div>{{user.name}}</div>
+<div id="howtoplay">
+  <h1>HOW TO PLAY!</h1>
+</div>
 <div id="project4-game" class="game"></div>
+
 
 <script src="./bower_components/phaser/build/phaser.min.js"></script>
 
