Added a How to play

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,15 @@
 <div>VIEW</div>
 <div id="howtoplay">
   <h1>HOW TO PLAY!</h1>
+  <div class="leftAlign">
+    <ul>
+      <li>Use Left and Right Arrow Keys to Move</li>
+      <li>Hold Down Space Bar to Shoot</li>
+      <li>10 Points for Each Object</li>
+      <li>200 Points for the Slower-Moving Gems</li>
+      <li>Beat Your High Score!</li>
+    </ul>
+  </div>
 </div>
 <div id="project4-game" class="game"></div>
 
