updated how to play

--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,9 @@
       <ul>
         <li>Use Left and Right Arrow Keys to Move</li>
         <li>Hold Down Space Bar to Shoot</li>
-        <li>10 Points for Each Object</li>
-        <li>200 Points for the Slower-Moving Gems</li>
-        <li>Regular Objects Increase in Speed Each Level</li>
+        <li>10 Points for Space Junk</li>
+        <li>200 Points for the Slow-Moving Gems</li>
+        <li>Space Junk Increase in Speed, and Spawn Faster Each Level</li>
         <li>Staying still and holding down space bar won't get you very far!</li>
         <li>Good Luck, and Try to Beat Your High Score!</li>
       </ul>
