--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 
 	<!-- build:css main.min.css -->
   <link rel="stylesheet" href="css/main.css"> 
-  <link href='http://fonts.googleapis.com/css?family=Chewy' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Chewy' rel='stylesheet' type='text/css'>
 </head>
 
 
