Added another line to html instructions

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
         <li>10 Points for Space Junk</li>
         <li>500 Points for the Slow-Moving Gems</li>
         <li>Space Junk Increase in Speed, and Spawn Faster Each Level</li>
+        <li>Getting Hit by Space Junk or a Gem Will Stop the Game</li>
         <li>Staying still and holding down space bar won't get you very far!</li>
         <li>Good Luck, and Try to Beat Your High Score!</li>
       </ul>
