minor adjustments to css

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
   </div>
 </div>
 <div id="hideshow">
-  <button>Hide/Show Instructions</button>
+  <button id="btn">Hide/Show Instructions</button>
 </div>
 <div id="project4-game" class="game"></div>
 
