changed css, added logo

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 
 
 <body ng-app="myApp" ng-controller="myController">
-<div>VIEW</div>
+<div id="logo"><img src="assets/images/logo.png" alt="logo" height="350" width="275"></div>
 <div id="howtoplay">
   <h1>HOW TO PLAY!</h1>
   <div class="leftAlign">
