Changed title to SunDerp's Adventure

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>	
 <html>
 <head>
-	<title>project4</title>
+	<title>SunDerp's Adventure</title>
 
 	<!-- build:css main.min.css -->
   <link rel="stylesheet" href="css/main.css"> 
