--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 	<!-- build:css main.min.css -->
   <link rel="stylesheet" href="css/main.css"> 
   <link href='https://fonts.googleapis.com/css?family=Chewy' rel='stylesheet' type='text/css'>
+  <link rel="shortcut icon" href="assets/images/sunderpicon.ico">
 </head>
 
 
